src-tauri/tests/snapshots/pipeline_scenarios__edge_non_json_content_with_malformed_json.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: assistant
  id: a1
  content_length: 1
  content:
    - type: text
      text: "{not really json"
  status:
    type: complete
    reason: stop
  streaming: ~
