src-tauri/tests/snapshots/pipeline_scenarios__edge_single_assistant_text.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: assistant
  id: a1
  content_length: 1
  content:
    - type: text
      text: hi
  status:
    type: complete
    reason: stop
  streaming: ~
