src-tauri/tests/snapshots/pipeline_scenarios__edge_streaming_flag.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: assistant
  id: a1
  content_length: 1
  content:
    - type: text
      text: streaming...
  status:
    type: complete
    reason: stop
  streaming: true
