src-tauri/tests/snapshots/pipeline_scenarios__err_content_string.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: system
  id: e1
  content_length: 1
  content:
    - type: text
      text: "Error: Something broke"
  status: ~
  streaming: ~
