src-tauri/tests/snapshots/pipeline_scenarios__exit_plan_mode_empty_allowed_prompts_serializes_as_empty_array.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: assistant
  id: msg-1
  content_length: 1
  content:
    - type: plan-review
      tool_use_id: tool-1
      tool_name: ExitPlanMode
      plan_length: 13
      plan_preview: Do the thing.
      plan_file_path: ~
      allowed_prompt_tools: []
  status: ~
  streaming: ~
